// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders as a badge 1`] = `
<div>
  <span
    class="widget-badge badge"
  >
    text
  </span>
</div>
`;

exports[`Badge renders as a button like element when onClick function is passed 1`] = `
<div>
  <span
    class="widget-badge badge widget-badge-clickable"
    role="button"
  >
    text
  </span>
</div>
`;

exports[`Badge renders as a button like element when onKeyDown function is passed 1`] = `
<div>
  <span
    class="widget-badge badge"
    role="button"
  >
    text
  </span>
</div>
`;

exports[`Badge renders as a label 1`] = `
<div>
  <span
    class="widget-badge label"
  >
    text
  </span>
</div>
`;

exports[`Badge renders custom classes 1`] = `
<div>
  <span
    class="widget-badge badge custom-class"
  >
    text
  </span>
</div>
`;

exports[`Badge renders custom styles 1`] = `
<div>
  <span
    class="widget-badge badge"
    style="padding: 5px;"
  >
    text
  </span>
</div>
`;

exports[`Badge renders when an empty string is passed as value 1`] = `
<div>
  <span
    class="widget-badge badge"
  />
</div>
`;

exports[`Badge renders with a tabIndex 1`] = `
<div>
  <span
    class="widget-badge badge"
    tabindex="1"
  >
    text
  </span>
</div>
`;
